--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <link href="styles.css" rel="stylesheet" />
   </head>
   <body>
+    <div class="calculator-grid">
+      <div class="output">
+        <div class="previous-operand"></div>
+        <div class="current-operand"></div>
+      </div>
+      <button class="span-two">AC</button>
+      <button>DEL</button>
+      <button>÷</button>
+      <button>÷</button>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
